Added db.json file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <h1>Movies</h1>
+  <h1>Ghibli Movies</h1>
   <button id="movies">All Movies</button>
   <button id="darkmode">Toggle Darkmode</button>
   <hr>
