Added darkmode stylesheet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Ghibli Movies</h1>
   <button id="movies">All Movies</button>
-  <button id="darkmode">Toggle Darkmode</button>
+  <button id="dmButton">Toggle Darkmode</button>
   <hr>
   <br>
   <div id="main">
