--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Ghibli Movie App</title>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" id="cssfile" href="./index.css">
 </head>
 <body>
   <h1>Ghibli Movies</h1>
