Changed all movie button to a mouse leave event

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <h1>Ghibli Movies</h1>
-  <button id="movies">All Movies</button>
-  <button id="dmButton">Toggle Darkmode</button>
+  <button id="movies">Move Your Mouse In And Out of Here to Show All Movies</button>
+  <button id="dmButton">Mouseover to Toggle Darkmode</button>
   <hr>
   <br>
   <div id="main">
